2000-11-29  Max Horn  <max@quendi.de>
	* updated Makefiles/configure.in to include gumps

2000-11-29  Max Horn  <max@quendi.de>
	* gumps/*: split up gumps.cc/h and spells.cc/h into separate files
	* autoarray.h: std:: changes
	* game.h: made sure this file can be included before gamewin.h (previously, you would get errors)
	* exult.cc: moved some gump-related stuff to gumps/gump_utils.cc/h
	* various: adapted to gumps changes

2000-11-28  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode/*: split up usecode.cc/h into separate files
	* configure.in, Makefile.am: changed to reflect this
	* Makefile.win32, Makefile.Be, Makefile.cygwin: changed too
	* various: changed includes

2000-11-28  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* usecode.h: in usecode macros: '## NAME ## (int...' to '## NAME (int...'
	* Makefile.be: adapted somewhat because of new imagewin directory

2000-11-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* configure.in: I mistakenly used target instead of host. fixed.

2000-11-27  Max Horn  <max@quendi.de>
	* files/*.cc: changed retrieve() to return a char* instead of taking a char**
	* various files: changed Uint? to uint? (so we are less dependant on SDL)
	* imagewin/imagebuf.h: fixed ~Image_buffer to use delete [] instead of delete
	* actions.cc: fixed ~Sequence_actor_action to use delete [] instead of delete
	* gumps.cc: fixed ~Gump_text to use delete [] instead of delete
	* bggame.cc: added tab key to work like arrow down in the new game screen; space works like return
	* files/common_types.h: removed
	* exult_types.h: added as replacment for common_types.h
	* various files: changed Uint? to uint? (so we are less dependant on SDL)

2000-11-27  Tristan Tarrant <nadir@users.sourceforge.net>
	* tools/u7shpload.c: applied patch from Mark Winterrowd which
	  fixes bugs with loading shapes with negative offsets.

2000-11-27  Dancer Vesperman <dancer@users.sourceforge.net>
	* A quotable quote.
